--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "MIT",
   "dependencies": {
     "react": "^17.0.1",
+    "react-code-prettify": "^0.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^6.3.0"
   },
