--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage" : "http://DABeesleyTPR.github.io/Personal-Blog-using-React",
+  "homepage" : "http://DABeesleyTPR.github.io",
   "name": "react-typescript-webpack-starter",
   "version": "1.0.0",
   "description": "A starter template for React with Typescript using Webpack 5",
