--- a/package.json
+++ b/package.json
@@ -1,74 +1,75 @@
 {
    "name": "react-typescript-webpack-starter",
-  "version": "1.0.0",
-  "description": "A starter template for React with Typescript using Webpack 5",
-  "scripts": {
-    "start": "webpack serve --config webpack/webpack.config.js --env env=dev",
-    "build": "webpack --config webpack/webpack.config.js --env env=prod",
-    "lint": "eslint --fix \"./src/**/*.{js,jsx,ts,tsx,json}\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [
-    "React",
-    "TypeScript",
-    "Webpack 5",
-    "Starter Template",
-    "Boilerplate"
-  ],
-  "author": "Vishwas",
-  "license": "MIT",
-  "dependencies": {
-    "react": "^17.0.1",
-    "react-code-prettify": "^0.0.1",
-    "react-dom": "^17.0.1",
-    "react-router-dom": "^6.3.0",
-    "react-syntax-highlighter": "^15.5.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/plugin-transform-runtime": "^7.13.10",
-    "@babel/preset-env": "^7.12.16",
-    "@babel/preset-react": "^7.12.13",
-    "@babel/preset-typescript": "^7.12.16",
-    "@babel/runtime": "^7.13.10",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
-    "@types/react": "^17.0.2",
-    "@types/react-dom": "^17.0.1",
-    "@types/react-syntax-highlighter": "^15.5.1",
-    "@typescript-eslint/eslint-plugin": "^4.15.0",
-    "@typescript-eslint/parser": "^4.15.0",
-    "babel-loader": "^8.2.2",
-    "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^5.0.2",
-    "eslint": "^7.19.0",
-    "eslint-config-prettier": "^7.2.0",
-    "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "html-webpack-plugin": "^5.1.0",
-    "husky": "4",
-    "lint-staged": "^10.5.4",
-    "react-refresh": "^0.9.0",
-    "sass": "^1.52.1",
-    "sass-loader": "^13.0.0",
-    "style-loader": "^2.0.0",
-    "typescript": "^4.1.5",
-    "webpack": "^5.72.1",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^3.11.3",
-    "webpack-merge": "^5.7.3"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx,json}": [
-      "eslint --fix"
-    ]
-  }
+   "version": "1.0.0",
+   "description": "A starter template for React with Typescript using Webpack 5",
+   "scripts": {
+      "start": "webpack serve --config webpack/webpack.config.js --env env=dev",
+      "build": "webpack --config webpack/webpack.config.js --env env=prod",
+      "lint": "eslint --fix \"./src/**/*.{js,jsx,ts,tsx,json}\"",
+      "test": "echo \"Error: no test specified\" && exit 1"
+   },
+   "keywords": [
+      "React",
+      "TypeScript",
+      "Webpack 5",
+      "Starter Template",
+      "Boilerplate"
+   ],
+   "author": "Vishwas",
+   "license": "MIT",
+   "dependencies": {
+      "react": "^17.0.1",
+      "react-code-prettify": "^0.0.1",
+      "react-dom": "^17.0.1",
+      "react-helmet": "^6.1.0",
+      "react-router-dom": "^6.3.0",
+      "react-syntax-highlighter": "^15.5.0"
+   },
+   "devDependencies": {
+      "@babel/core": "^7.12.16",
+      "@babel/plugin-transform-runtime": "^7.13.10",
+      "@babel/preset-env": "^7.12.16",
+      "@babel/preset-react": "^7.12.13",
+      "@babel/preset-typescript": "^7.12.16",
+      "@babel/runtime": "^7.13.10",
+      "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
+      "@types/react": "^17.0.2",
+      "@types/react-dom": "^17.0.1",
+      "@types/react-syntax-highlighter": "^15.5.1",
+      "@typescript-eslint/eslint-plugin": "^4.15.0",
+      "@typescript-eslint/parser": "^4.15.0",
+      "babel-loader": "^8.2.2",
+      "clean-webpack-plugin": "^3.0.0",
+      "css-loader": "^5.0.2",
+      "eslint": "^7.19.0",
+      "eslint-config-prettier": "^7.2.0",
+      "eslint-plugin-eslint-comments": "^3.2.0",
+      "eslint-plugin-import": "^2.22.1",
+      "eslint-plugin-jsx-a11y": "^6.4.1",
+      "eslint-plugin-prettier": "^3.3.1",
+      "eslint-plugin-react": "^7.22.0",
+      "eslint-plugin-react-hooks": "^4.2.0",
+      "html-webpack-plugin": "^5.1.0",
+      "husky": "4",
+      "lint-staged": "^10.5.4",
+      "react-refresh": "^0.9.0",
+      "sass": "^1.52.1",
+      "sass-loader": "^13.0.0",
+      "style-loader": "^2.0.0",
+      "typescript": "^4.1.5",
+      "webpack": "^5.72.1",
+      "webpack-cli": "^4.9.2",
+      "webpack-dev-server": "^3.11.3",
+      "webpack-merge": "^5.7.3"
+   },
+   "husky": {
+      "hooks": {
+         "pre-commit": "lint-staged"
+      }
+   },
+   "lint-staged": {
+      "src/**/*.{js,jsx,ts,tsx,json}": [
+         "eslint --fix"
+      ]
+   }
 }
