--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
       "react-dom": "^17.0.1",
       "react-helmet": "^6.1.0",
       "react-router-dom": "^6.3.0",
+      "react-spinners": "^0.12.0",
       "react-syntax-highlighter": "^15.5.0"
    },
    "devDependencies": {
