--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
       "start": "webpack serve --config webpack/webpack.config.js --env env=dev",
       "build": "webpack --config webpack/webpack.config.js --env env=prod",
       "lint": "eslint --fix \"./src/**/*.{js,jsx,ts,tsx,json}\"",
-      "test": "echo \"Error: no test specified\" && exit 1"
+      "test": "vitest"
    },
    "keywords": [
       "React",
@@ -60,7 +60,16 @@
       "webpack": "^5.72.1",
       "webpack-cli": "^4.9.2",
       "webpack-dev-server": "^3.11.3",
-      "webpack-merge": "^5.7.3"
+      "webpack-merge": "^5.7.3",
+      "@testing-library/jest-dom": "^5.16.4",
+      "@testing-library/react": "^12.1.5",
+      "@testing-library/react-hooks": "^8.0.0",
+      "@testing-library/user-event": "^13.5.0",
+      "@vitejs/plugin-react": "^1.3.2",
+      "@vitest/ui": "latest",
+      "jsdom": "latest",
+      "vite": "^2.9.9",
+      "vitest": "latest"
    },
    "husky": {
       "hooks": {
