update to use 'vitest --coverage' script

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
       "start": "webpack serve --config webpack/webpack.config.js --env env=dev",
       "build": "webpack --config webpack/webpack.config.js --env env=prod",
       "lint": "eslint --fix \"./src/**/*.{js,jsx,ts,tsx,json}\"",
-      "test": "vitest"
+      "test": "vitest",
+      "test:coverage": "vitest --coverage"
    },
    "keywords": [
       "React",
@@ -33,12 +34,19 @@
       "@babel/preset-typescript": "^7.12.16",
       "@babel/runtime": "^7.13.10",
       "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
+      "@testing-library/jest-dom": "^5.16.4",
+      "@testing-library/react": "^12.1.5",
+      "@testing-library/react-hooks": "^8.0.0",
+      "@testing-library/user-event": "^13.5.0",
       "@types/react": "^17.0.2",
       "@types/react-dom": "^17.0.1",
       "@types/react-syntax-highlighter": "^15.5.1",
       "@typescript-eslint/eslint-plugin": "^4.15.0",
       "@typescript-eslint/parser": "^4.15.0",
+      "@vitejs/plugin-react": "^1.3.2",
+      "@vitest/ui": "latest",
       "babel-loader": "^8.2.2",
+      "c8": "^7.11.3",
       "clean-webpack-plugin": "^3.0.0",
       "css-loader": "^5.0.2",
       "eslint": "^7.19.0",
@@ -51,25 +59,19 @@
       "eslint-plugin-react-hooks": "^4.2.0",
       "html-webpack-plugin": "^5.1.0",
       "husky": "4",
+      "jsdom": "latest",
       "lint-staged": "^10.5.4",
       "react-refresh": "^0.9.0",
       "sass": "^1.52.1",
       "sass-loader": "^13.0.0",
       "style-loader": "^2.0.0",
       "typescript": "^4.1.5",
+      "vite": "^2.9.9",
+      "vitest": "latest",
       "webpack": "^5.72.1",
       "webpack-cli": "^4.9.2",
       "webpack-dev-server": "^3.11.3",
-      "webpack-merge": "^5.7.3",
-      "@testing-library/jest-dom": "^5.16.4",
-      "@testing-library/react": "^12.1.5",
-      "@testing-library/react-hooks": "^8.0.0",
-      "@testing-library/user-event": "^13.5.0",
-      "@vitejs/plugin-react": "^1.3.2",
-      "@vitest/ui": "latest",
-      "jsdom": "latest",
-      "vite": "^2.9.9",
-      "vitest": "latest"
+      "webpack-merge": "^5.7.3"
    },
    "husky": {
       "hooks": {
