--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
       "@testing-library/react": "^12.1.5",
       "@testing-library/react-hooks": "^8.0.0",
       "@testing-library/user-event": "^13.5.0",
+      "@types/enzyme": "^3.10.12",
       "@types/react": "^17.0.2",
       "@types/react-dom": "^17.0.1",
       "@types/react-syntax-highlighter": "^15.5.1",
@@ -49,6 +50,8 @@
       "c8": "^7.11.3",
       "clean-webpack-plugin": "^3.0.0",
       "css-loader": "^5.0.2",
+      "enzyme": "^3.11.0",
+      "enzyme-to-json": "^3.6.2",
       "eslint": "^7.19.0",
       "eslint-config-prettier": "^7.2.0",
       "eslint-plugin-eslint-comments": "^3.2.0",
