--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,4 +21,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
-      - run: yarn test
+      - run: |
+          yarn
+          yarn test
