gh actions for deploy #1

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,3 +24,12 @@ jobs:
       - run: |
           yarn
           yarn test
+  
+  deploy:
+    name: 'Deploy'
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v1
+      - run: |
+          yarn netlify deploy
