--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,19 +1,13 @@
-# This is a basic workflow to help you get started with Actions
+name: CI/CD
 
-name: CI
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "master" branch
   push:
     branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
 
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   test: 
     name: 'Tests'
@@ -25,13 +19,13 @@ jobs:
           yarn
           yarn test
   
-  deploy:
-    name: 'Deploy'
-    needs: test
-    runs-on: ubuntu-latest
+  # deploy:
+  #   name: 'Deploy'
+  #   needs: test
+  #   runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v1
-      - run: |
-          yarn
-          yarn netlify deploy
+  #   steps:
+  #     - uses: actions/checkout@v1
+  #     - run: |
+  #         yarn
+  #         yarn netlify deploy
